# aselsan-embedded-software-developer

./: README.md
week1/: CMakeLists.txt
week1/01_pointers/: pointers.cpp
week1/02_references/: references.cpp
week1/03_stack_vs_heap/: stack_heap.cpp
week1/04_raii/: raii.cpp
week1/05_smart_pointers/: smart_pointers.cpp
week1/06_move_semantics/: move_semantics.cpp
week1/07_const_correctness/: const_correctness.cpp
